<resources>

    <!-- IDS TAGS-->
    <string name="mediacontroller">mediacontroller</string>
    <string name="streamingbuttonAdapter">streamingbuttonAdapter</string>
    <string name="videoViewisAudio">videoViewisAudio</string>


    <string name="app_name">Lernapp</string>
    <string name="learngroupactivitylabel">Lerngruppen</string>
    <string name="categoryactivitylabel">Kategorien</string>
    <string name="topicsactivitylabel">Topics</string>
    <string name="contentactivitylabel">Neuer Post</string>


    <!-- Berechtigungsdialog -->
    <string name="permission_dialog">Berechtigung der Kontakte</string>
    <string name="permission_dialog_positiv">Zugriff erlauben</string>
    <string name="permission_dialog_negativ">Zugriff verweigern</string>

    <!-- Creategroupdialog -->
    <string name="confirm_group_dialog_text">Neue Gruppe erstellen</string>
    <string name="confirm_group_dialog_hint">Gruppenname</string>
    <string name="confirm_group_dialog_positiv">Erstellen</string>
    <string name="confirm_group_dialog_negativ">Zurück</string>

    <!-- Deletegroupdialog -->
    <string name="delete_group_dialog_text">Soll die Gruppe gelöscht werden ?</string>
    <string name="exit_group_dialog_text">Möchtest du die Gruppe verlassen ?</string>
    <string name="delete_group_dialog_groupname">Gruppenname</string>
    <string name="delete_group_dialog_positiv">Bestätigen</string>
    <string name="delete_group_dialog_negativ">Zurück</string>


    <!-- Gruppen -->
    <string name="group_list_switchtext">Eigene Gruppen</string>

    <!-- Memberadddialog Link -->
    <string name="invite_link_title">Gruppenlink:</string>
    <string name="invite_link_linkbox">Link</string>
    <string name="invite_link_copybutton">Kopieren</string>

    <!-- Joingroup Link -->
    <string name="join_link_title">Gruppenlink eingeben:</string>
    <string name="join_link_hint">Gruppenlink</string>
    <string name="join_link_positivebutton">Beitreten</string>
    <string name="join_link_negativbutton">Zurück</string>

    <!-- Add Category Dialog -->
    <string name="add_category_dialog_text">Neue Kategory erstellen</string>
    <string name="add_category_dialog_hint">Kategorienname</string>
    <string name="add_category_dialog_positiv">Erstellen</string>
    <string name="add_category_dialog_negativ">Zurück</string>

    <!-- Storage Permission Dialog -->
    <string name="storagepermission_text">
        Die Speicherzugriffsberechtigung wird benötigt um serverseitige Daten zwischenzuspeichern, um dein Traffic zu <u>sparen</u>. \n\n
        Wenn du diese Berechtigung verweigerst, werden alle Medien die in den nachfolgenden Posts zusehen sind, <u>gestreamt</u>. \n
    </string>

    <string name="title_activity_imageview_preview">imageviewPreviewActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


</resources>
